[gd_scene load_steps=3 format=3 uid="uid://braope5w5yohx"]

[ext_resource type="Script" uid="uid://ccgfj0tov2e34" path="res://player/pickups/pickup.gd" id="1_xcju5"]

[sub_resource type="SphereShape3D" id="SphereShape3D_ec5yq"]
radius = 0.4

[node name="Pickup" type="Node3D"]
script = ExtResource("1_xcju5")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_ec5yq")

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area3D" to="." method="_on_body_entered"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
